Ajustmement de details de la connexion