@@ -29,6 +29,7 @@ import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
+import java.net.URL;
 
 import static java.lang.Thread.sleep;
 
@@ -165,21 +166,35 @@ public class LanternaCombat {
                 String json = "{\"username\":\"" + usernameBox.getText() + "\",\"password\":\"" + passwordBox.getText() + "\"}";
                 String response = sendRequest("http://localhost:8080/login", "POST", json, null);
 
+                // Si c’est une erreur
+                if (response.startsWith("ERROR_403:") || response.startsWith("ERROR_401:")) {
+                    String errorJson = response.substring(response.indexOf(":") + 1);
+                    try {
+                        ObjectMapper mapper = new ObjectMapper();
+                        JsonNode errorNode = mapper.readTree(errorJson);
+                        String message = errorNode.has("error") ? errorNode.get("error").asText() : "Nom d'utilisateur ou mot de passe incorrect.";
+                        MessageDialog.showMessageDialog(gui, "Erreur", message);
+                    } catch (Exception ex) {
+                        MessageDialog.showMessageDialog(gui, "Erreur", "Nom d'utilisateur ou mot de passe incorrect.");
+                    }
+                    return;
+                }
+
+
                 ObjectMapper mapper = new ObjectMapper();
                 JsonNode node = mapper.readTree(response);
 
                 JsonNode tokenNode = node.get("token");
                 JsonNode usernameNode = node.get("username");
                 JsonNode userIdNode = node.get("userId");
-                userId = userIdNode.asInt();
 
                 if (tokenNode != null && usernameNode != null && userIdNode != null) {
                     isLoggedIn = true;
                     jwtToken = tokenNode.asText();
                     NomUser = usernameNode.asText();
+                    userId = userIdNode.asInt();
 
-                    MessageDialog.showMessageDialog(gui, "Succès",
-                            "Bienvenue " + usernameNode.asText());
+                    MessageDialog.showMessageDialog(gui, "Succès", "Bienvenue " + NomUser);
                     window.close();
                     showLoggedInMenu(gui);
                 } else {
@@ -187,7 +202,7 @@ public class LanternaCombat {
                 }
 
             } catch (Exception e) {
-                MessageDialog.showMessageDialog(gui, "Erreur", e.getMessage());
+                MessageDialog.showMessageDialog(gui, "Erreur", "Une erreur est survenue : " + e.getMessage());
             }
         }));
 
@@ -197,6 +212,8 @@ public class LanternaCombat {
         window.setComponent(panel);
         gui.addWindowAndWait(window);
     }
+
+
 
     private static void showLoggedInMenu(MultiWindowTextGUI gui) {
         BasicWindow window = new BasicWindow("Connecté");
@@ -887,8 +904,10 @@ public class LanternaCombat {
         }
     }
 
+
     private static String sendRequest(String urlString, String method, String body, String token) throws Exception {
-        URL url = new URL(urlString);
+        URI uri = new URI(urlString); // Remplacer String par URI
+        URL url = uri.toURL(); // Conversion en URL
         HttpURLConnection con = (HttpURLConnection) url.openConnection();
         con.setRequestMethod(method);
         con.setRequestProperty("Content-Type", "application/json");
@@ -905,22 +924,29 @@ public class LanternaCombat {
             }
         }
 
-        InputStream inputStream;
-        if (con.getResponseCode() >= 400) {
-            inputStream = con.getErrorStream();
-        } else {
-            inputStream = con.getInputStream();
-        }
+        int responseCode = con.getResponseCode();
+        InputStream inputStream = (responseCode >= 400) ? con.getErrorStream() : con.getInputStream();
 
+        StringBuilder response = new StringBuilder();
         try (BufferedReader br = new BufferedReader(new InputStreamReader(inputStream, "utf-8"))) {
-            StringBuilder response = new StringBuilder();
             String responseLine;
             while ((responseLine = br.readLine()) != null) {
                 response.append(responseLine.trim());
             }
-            return response.toString();
         }
+
+        if (responseCode >= 400) {
+            return "ERROR_" + responseCode + ":" + response.toString();
+        }
+
+        return response.toString();
     }
+
+
+
+
+
+
 
     private static Personnage createCharacter(String characterId) {
         switch (characterId) {
